--- a/pixi.toml
+++ b/pixi.toml
@@ -13,7 +13,11 @@ platforms = ["linux-64", "win-64", "osx-64", "osx-arm64", "linux-aarch64"]
 preview = ["pixi-build"]
 requires-pixi = ">=0.45"
 
-[workspace.target.linux-64.build-variants]
+[workspace.build-variants]
+rust_compiler_version = ["1.90.0"]
+
+[workspace.target.linux.build-variants]
+c_stdlib = ["sysroot"]
 c_stdlib_version = ["2.17"]
 
 [workspace.target.osx.build-variants]
@@ -442,6 +446,3 @@ source = { path = "crates/pixi" }
 
 [package.target.unix.build-dependencies]
 clang = "*"
-
-[workspace.build-variants]
-rust_compiler_version = ["1.90.0"]
