--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -491,7 +491,10 @@ jobs:
   #          retention-days: 14
 
   pixi-build:
+    environment:
+      name: prefix-dev
     permissions:
+      contents: read
       id-token: write
     needs: determine_changes
     if: ${{ needs.determine_changes.outputs.code == 'true' || github.ref == 'refs/heads/main' }}
