--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -504,7 +504,7 @@ jobs:
         include:
           - runner: namespace-profile-ubuntu-24-04-x86-64-4
             name: linux-64
-          - runner: macos-latest
+          - runner: namespace-profile-macos-15-arm64-6
             name: osx-arm64
           - runner: namespace-profile-windows-2022-x86-64-8
             name: win-64
