--- a/pixi.toml
+++ b/pixi.toml
@@ -201,16 +201,6 @@ ruff-fmt = { cmd = "ruff format --exit-non-zero-on-format --force-exclude", desc
 ruff-lint = { cmd = "ruff check --fix --exit-non-zero-on-fix --force-exclude", description = "Lint Python code with ruff" }
 
 #
-# Feature for generating PyPI test indexes
-#
-[feature.pypi-gen.dependencies]
-hatchling = ">=1.27.0,<2"
-python-build = ">=1.3.0,<2"
-
-[feature.pypi-gen.tasks]
-pypi-gen-indexes = { cmd = "python tests/data/pypi-indexes/generate-indexes.py", description = "Generate PyPI test indexes" }
-
-#
 # Feature for release tasks
 #
 [feature.release.dependencies]
@@ -227,6 +217,7 @@ release = { cmd = "python scripts/release.py", description = "Run the release sc
 # Feature for Python integration tests with pytest
 #
 [feature.pytest.tasks]
+pypi-gen-indexes = { cmd = "python tests/data/pypi-indexes/generate-indexes.py", description = "Generate PyPI test indexes" }
 test-common-wheels = { cmd = "pytest -s --numprocesses=auto tests/wheel_tests/", depends-on = [
   "build-release",
 ], description = "Run common wheel tests" }
@@ -248,6 +239,7 @@ test-pixi-build = { cmd = "pytest --numprocesses=auto --durations=0 --timeout=30
 test-pixi-build-debug = { cmd = "pytest --pixi-build=debug --numprocesses=auto --durations=0 --timeout=300 tests/integration_python/pixi_build/", depends-on = [
   "build-debug",
 ], description = "Run pixi-build integration tests with debug build" }
+
 
 [feature.pytest.tasks.test-specific-test]
 args = ["test_substring"]
@@ -285,6 +277,10 @@ rattler-build = ">=0.55,<0.56"
 rich = ">=14.1.0,<15"
 tomli-w = ">=1.2.0,<2"
 types-pyyaml = ">=6.0.12.20250915,<7"
+
+# Dependencies to generate the pypi test indexes
+hatchling = ">=1.27.0,<2"
+python-build = ">=1.3.0,<2"
 
 #
 # Feature for building rattler-build recipes
@@ -387,9 +383,7 @@ lint = { features = [
   "python",
   "python-test-deps",
   "schema",
-  "pypi-gen",
 ] }
-pypi-gen = { features = ["python", "pypi-gen"] }
 python-test = { features = ["pytest", "python-test-deps", "python"] }
 recipes = { features = ["recipes"] }
 release = { features = ["release"] }
