--- a/.github/workflows/backends-python-bindings.yml
+++ b/.github/workflows/backends-python-bindings.yml
@@ -31,7 +31,7 @@ jobs:
     name: Test the Python bindings
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           submodules: recursive
           persist-credentials: false
