--- a/pixi.toml
+++ b/pixi.toml
@@ -165,7 +165,6 @@ cargo-deny = ">=0.19,<0.19.1" # 0.18.5 breaks license checking for uv crates
 cargo-shear = ">=1.7.1,<2"
 dprint = ">=0.49.1,<0.51"
 go-shfmt = ">=3.12.0,<4"
-lefthook = ">=2.0.11,<3"
 ruff = ">=0.14.0,<0.15"
 shellcheck = ">=0.10.0,<0.11"
 taplo = ">=0.10.0,<0.11"
@@ -173,16 +172,6 @@ typos = ">=1.38.1,<2"
 zizmor = ">=1.18.0,<2"
 
 [feature.lint.tasks]
-lefthook = { cmd = "lefthook", description = "Run lefthook" }
-lint = { depends-on = [
-  "lint-fast",
-  "lint-slow",
-], description = "Run all linters and formatters on all code" }
-lint-fast = { cmd = "lefthook run pre-commit --all-files --force", description = "Run all fast linters and formatters (no clippy)" }
-lint-slow = { cmd = "lefthook run pre-push --all-files --force", description = "Run all slow linters and formatters" }
-pre-commit-install = { cmd = "lefthook install", description = "Install all git hooks" }
-pre-commit-install-minimal = { cmd = "lefthook install pre-commit", description = "Install only pre-commit hook" }
-
 _actionlint = { cmd = "actionlint", env = { SHELLCHECK_OPTS = "-e SC2086" }, description = "Lint GitHub Actions workflows" }
 _cargo-deny = { cmd = "cargo deny --workspace check license --deny warnings", description = "Check cargo dependencies licenses" }
 _cargo-shear = { cmd = "cargo shear --fix", description = "Remove unused dependencies" }
@@ -363,6 +352,23 @@ zstd = ">=1.5.7,<2"
 build-trampoline = { cmd = "python trampoline/build-trampoline.py", description = "Build the trampolines" }
 
 #
+# Feature for running lefthook (lint orchestration)
+#
+[feature.lefthook.dependencies]
+lefthook = ">=2.0.11,<3"
+
+[feature.lefthook.tasks]
+lefthook = { cmd = "lefthook", description = "Run lefthook" }
+lint = { depends-on = [
+  "lint-fast",
+  "lint-slow",
+], description = "Run all linters and formatters on all code" }
+lint-fast = { cmd = "lefthook run pre-commit --all-files --force", description = "Run all fast linters and formatters (no clippy)" }
+lint-slow = { cmd = "lefthook run pre-push --all-files --force", description = "Run all slow linters and formatters" }
+pre-commit-install = { cmd = "lefthook install", description = "Install all git hooks" }
+pre-commit-install-minimal = { cmd = "lefthook install pre-commit", description = "Install only pre-commit hook" }
+
+#
 # Environment definitions
 #
 [environments]
@@ -390,6 +396,8 @@ schema = { features = ["schema"] }
 test = { features = ["test"] }
 # TODO: figure out why this is not in a rust-build env.
 trampoline = { features = ["trampoline", "python"] }
+# Required as it runs pixi tasks itself, so we don't want it to have a dependencies on itself.
+lefthook = { features = ["lefthook"] }
 
 #
 # Package definitions
