fix windows recipe test

--- a/tests/data/pixi-build/recursive_source_run_dep/package_b/recipe.yaml
+++ b/tests/data/pixi-build/recursive_source_run_dep/package_b/recipe.yaml
@@ -7,7 +7,7 @@ build:
   script:
     - if: win
       then:
-        - mkdir %PREFIX%\bin
+        - if not exist %PREFIX%\bin mkdir %PREFIX%\bin
         - echo @echo off > %PREFIX%\bin\package-b.bat
         - echo echo hello from package-b >> %PREFIX%\bin\package-b.bat
       else:
