Add serial group and move temp folder to C:]\.r

--- a/pixi.toml
+++ b/pixi.toml
@@ -260,16 +260,16 @@ test-common-wheels = { cmd = "pytest -s --numprocesses=logical tests/wheel_tests
   "build-release",
 ], description = "Run common wheel tests" }
 # CI tests add --showlocals, and -vv for better visibility in CI logs
-test-common-wheels-ci = { cmd = "pytest --numprocesses=logical --showlocals -vv --verbose tests/wheel_tests/", description = "Run common wheel tests in CI" }
-test-integration-ci = { cmd = "pytest --numprocesses=logical  --showlocals -vv --durations=0 --timeout=100 --verbose -m 'not extra_slow' tests/integration_python", description = "Run integration tests in CI" }
+test-common-wheels-ci = { cmd = "pytest --numprocesses=logical --dist loadgroup --showlocals -vv --verbose tests/wheel_tests/", description = "Run common wheel tests in CI" }
+test-integration-ci = { cmd = "pytest --numprocesses=logical --dist loadgroup --showlocals -vv --durations=0 --timeout=100 --verbose -m 'not extra_slow' tests/integration_python", description = "Run integration tests in CI" }
 test-integration-extra-slow = { cmd = "pytest --numprocesses=logical --durations=0 --timeout=600 tests/integration_python", depends-on = [
   "build-release",
 ], description = "Run all integration tests including extra slow" }
-test-integration-extra-slow-ci = { cmd = "pytest --numprocesses=logical --showlocals -vv --durations=0 --timeout=600 tests/integration_python", description = "Run all integration tests in CI" }
+test-integration-extra-slow-ci = { cmd = "pytest --numprocesses=logical --dist loadgroup --showlocals -vv --durations=0 --timeout=600 tests/integration_python", description = "Run all integration tests in CI" }
 test-integration-fast = { cmd = "pytest --pixi-build=debug --numprocesses=logical --durations=0 --timeout=100 -m 'not slow and not extra_slow' tests/integration_python", depends-on = [
   "build-debug",
 ], description = "Run fast integration tests with debug build" }
-test-integration-slow = { cmd = "pytest --numprocesses=logical --durations=0 --timeout=100 -m 'not extra_slow' tests/integration_python", depends-on = [
+test-integration-slow = { cmd = "pytest --numprocesses=logical --dist loadgroup --durations=0 --timeout=100 -m 'not extra_slow' tests/integration_python", depends-on = [
   "build-release",
 ], description = "Run integration tests excluding extra slow" }
 test-pixi-build = { cmd = "pytest --numprocesses=logical --durations=0 --timeout=300 tests/integration_python/pixi_build/", depends-on = [
