--- a/docs/source_files/pixi_config_tomls/main_config.toml
+++ b/docs/source_files/pixi_config_tomls/main_config.toml
@@ -40,11 +40,10 @@ tool-platform = "win-64" # force tools like build backends to be installed for a
 
 #  --8<-- [start:repodata-config]
 [repodata-config]
-# disable fetching of jlap, bz2 or zstd repodata files.
+# disable fetching of bz2 or zstd repodata files.
 # This should only be used for specific old versions of artifactory and other non-compliant
 # servers.
 disable-bzip2 = true   # don't try to download repodata.json.bz2
-disable-jlap = true    # don't try to download repodata.jlap [default: true]
 disable-sharded = true # don't try to download sharded repodata
 disable-zstd = true    # don't try to download repodata.json.zst
 # --8<-- [end:repodata-config]
