--- a/tests/data/pixi-build/multi-output/recipe/recipe.yaml
+++ b/tests/data/pixi-build/multi-output/recipe/recipe.yaml
@@ -9,7 +9,7 @@ outputs:
       script:
         - if: win
           then:
-            - mkdir -p %PREFIX%\bin
+            - if not exist %PREFIX%\bin mkdir %PREFIX%\bin
             - echo @echo off > %PREFIX%\bin\foobar.bat
             - echo echo Hello from foobar >> %PREFIX%\bin\foobar.bat
           else:
@@ -24,7 +24,7 @@ outputs:
       script:
         - if: win
           then:
-            - mkdir -p %PREFIX%\bin
+            - if not exist %PREFIX%\bin mkdir %PREFIX%\bin
             - echo @echo off > %PREFIX%\bin\bizbar.bat
             - echo echo Hello from bizbar >> %PREFIX%\bin\bizbar.bat
           else:
@@ -42,7 +42,7 @@ outputs:
       script:
         - if: win
           then:
-            - mkdir -p %PREFIX%\bin
+            - if not exist %PREFIX%\bin mkdir %PREFIX%\bin
             - echo @echo off > %PREFIX%\bin\foobar-desktop.bat
             - echo echo Hello from foobar-desktop >> %PREFIX%\bin\foobar-desktop.bat
           else:
