refactor: migrate build backends to modular rattler-build crate architecture

--- a/crates/pixi_build_cmake/Cargo.toml
+++ b/crates/pixi_build_cmake/Cargo.toml
@@ -25,6 +25,8 @@ minijinja = { workspace = true }
 pixi_build_backend = { workspace = true }
 pixi_build_types = { workspace = true }
 rattler-build = { workspace = true }
+rattler_build_jinja = { workspace = true }
+rattler_build_types = { workspace = true }
 rattler_conda_types = { workspace = true }
 recipe_stage0 = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
