--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,7 @@ target/
 **/*.rs.bk
 
 # Backend build debug output
+crates/pixi-build-*/debug/
 crates/pixi_build_*/debug/
 
 # Backend test artifacts channel
