--- a/crates/pixi_build_backend/Cargo.toml
+++ b/crates/pixi_build_backend/Cargo.toml
@@ -24,6 +24,10 @@ minijinja = { workspace = true }
 ordermap = { workspace = true }
 pathdiff = { workspace = true }
 rattler-build = { workspace = true }
+rattler_build_jinja = { workspace = true }
+rattler_build_recipe = { workspace = true }
+rattler_build_types = { workspace = true }
+rattler_build_variant_config = { workspace = true }
 rattler_conda_types = { workspace = true }
 rattler_digest = { workspace = true }
 rattler_virtual_packages = { workspace = true }
