--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -200,6 +200,58 @@ jobs:
           # Actually do builds and make zips and whatnot
           dist build ${{ needs.plan.outputs.tag-flag }} --print=linkage --output-format=json ${{ matrix.dist_args }} > dist-manifest.json
           echo "dist ran successfully"
+      - name: Azure login (OIDC)
+        if: runner.os == 'Windows'
+        uses: azure/login@a457da9ea143d694b1b9c7c869ebb04ebe844ef5 # v2.3.0
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          allow-no-subscriptions: true
+      - name: Extract Windows executables from archives
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          $signDir = Join-Path $env:RUNNER_TEMP "to-sign"
+          New-Item -ItemType Directory -Path $signDir -Force
+          foreach ($zip in (Get-ChildItem target/distrib -Filter "*.zip")) {
+            $extractDir = Join-Path $env:RUNNER_TEMP $zip.BaseName
+            Expand-Archive -Path $zip.FullName -DestinationPath $extractDir -Force
+            Get-ChildItem $extractDir -Filter "*.exe" -Recurse | Copy-Item -Destination $signDir
+          }
+          Get-ChildItem target/distrib -Filter "*.msi" | Copy-Item -Destination $signDir
+      - name: Sign Windows binaries
+        if: runner.os == 'Windows'
+        uses: azure/trusted-signing-action@87c2e83e6868da99d3380aa309851b32ed9a8346 # v1.1.0
+        with:
+          endpoint: ${{ vars.AZURE_SIGNING_ENDPOINT }}
+          trusted-signing-account-name: ${{ vars.AZURE_SIGNING_ACCOUNT_NAME }}
+          certificate-profile-name: ${{ vars.AZURE_CERTIFICATE_PROFILE_NAME }}
+          files-folder: ${{ runner.temp }}/to-sign
+          files-folder-filter: exe,msi
+          file-digest: SHA256
+          timestamp-rfc3161: http://timestamp.acs.microsoft.com
+          timestamp-digest: SHA256
+      - name: Repackage signed executables into archives
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          $signDir = Join-Path $env:RUNNER_TEMP "to-sign"
+          foreach ($zip in (Get-ChildItem target/distrib -Filter "*.zip")) {
+            $extractDir = Join-Path $env:RUNNER_TEMP $zip.BaseName
+            # Overwrite extracted exe with signed version
+            Get-ChildItem $extractDir -Filter "*.exe" -Recurse | ForEach-Object {
+              $signed = Join-Path $signDir $_.Name
+              if (Test-Path $signed) { Copy-Item $signed $_.FullName -Force }
+            }
+            # Recreate zip
+            Remove-Item $zip.FullName
+            Compress-Archive -Path (Join-Path $extractDir "*") -DestinationPath $zip.FullName
+          }
+          # Overwrite MSI with signed version
+          Get-ChildItem $signDir -Filter "*.msi" | ForEach-Object {
+            $orig = Get-ChildItem target/distrib -Filter $_.Name
+            if ($orig) { Copy-Item $_.FullName $orig.FullName -Force }
+          }
       - name: Attest Builds
         id: attest
         uses: actions/attest-build-provenance@96278af6caaf10aea03fd8d33a09a777ca52d62f # v3.2.0
