--- a/examples/ros2-nav2/pixi.toml
+++ b/examples/ros2-nav2/pixi.toml
@@ -11,10 +11,10 @@ start = "ros2 launch nav2_bringup tb3_simulation_launch.py headless:=False"
 channels = ["https://prefix.dev/robostack-staging"]
 
 [feature.humble.dependencies]
-ros-humble-desktop = "*"
-ros-humble-nav2-bringup = "*"
-ros-humble-turtlebot3-gazebo = "*"
-ros2-distro-mutex = "==0.5.0"
+ros-humble-desktop = ">=0.10.0,<0.11"
+ros-humble-nav2-bringup = ">=1.1.18,<2"
+ros-humble-turtlebot3-gazebo = ">=2.3.4,<3"
+ros2-distro-mutex = ">=0.7.0,<0.8"
 
 [feature.humble.activation.env]
 GAZEBO_MODEL_PATH = "$GAZEBO_MODEL_PATH:$CONDA_PREFIX/share/turtlebot3_gazebo/models"
@@ -24,8 +24,8 @@ TURTLEBOT3_MODEL = "waffle"
 channels = ["https://prefix.dev/robostack-jazzy"]
 
 [feature.jazzy.dependencies]
-ros-jazzy-desktop = "*"
-ros-jazzy-nav2-bringup = "*"
+ros-jazzy-desktop = ">=0.11.0,<0.12"
+ros-jazzy-nav2-bringup = ">=1.3.10,<2"
 
 [feature.jazzy.activation.env]
 # Required for the RVIZ2 to properly startup on osx
