fix: make sure database is cleaned

--- a/crates/http_cache_sqlite/Cargo.toml
+++ b/crates/http_cache_sqlite/Cargo.toml
@@ -15,6 +15,7 @@ rusqlite = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 url = { workspace = true }
+tokio = { workspace = true, features = ["sync"]}
 
 [dev-dependencies]
 http = { workspace = true }
