--- a/crates/pixi_cli/Cargo.toml
+++ b/crates/pixi_cli/Cargo.toml
@@ -54,6 +54,7 @@ pixi_global = { workspace = true }
 pixi_manifest = { workspace = true, features = ["rattler_lock"] }
 pixi_path = { workspace = true }
 pixi_progress = { workspace = true }
+pypi_mapping = { workspace = true }
 pixi_pypi_spec = { workspace = true }
 pixi_record = { workspace = true }
 pixi_reporters = { workspace = true }
