--- a/pixi.toml
+++ b/pixi.toml
@@ -9,7 +9,7 @@ authors = [
 ]
 channels = ["https://prefix.dev/conda-forge"]
 description = "Package management made easy!"
-platforms = ["linux-64", "win-64", "osx-64", "osx-arm64", "linux-aarch64"]
+platforms = ["linux-64"]
 preview = ["pixi-build"]
 requires-pixi = ">=0.45"
 build-variants-files = ["variants.yaml"]
