perf: construct HttpResponse directly instead of serde_json::Value round-trip
Add From conversions between local HttpVersion and upstream
http_cache::HttpVersion, then build/deconstruct HttpResponse by
accessing its fields directly. This eliminates two serde_json::Value
round-trips per cache get/put.

--- a/crates/http_cache_sqlite/Cargo.toml
+++ b/crates/http_cache_sqlite/Cargo.toml
@@ -9,6 +9,7 @@ repository.workspace = true
 [dependencies]
 async-trait = { workspace = true }
 fs-err = { workspace = true }
+http-cache = { workspace = true }
 http-cache-reqwest = { workspace = true }
 http-cache-semantics = { workspace = true }
 rusqlite = { workspace = true }
