--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ futures = "0.3.31"
 hashlink = "0.10.0"
 hex = "0.4.3"
 http = "1.3.1"
+http-cache = { version = "0.21.0", default-features = false }
 http-cache-reqwest = "0.16.0"
 http-cache-semantics = "2.1.0"
 http_cache_sqlite = { path = "crates/http_cache_sqlite" }
