--- a/.github/workflows/trampoline.yaml
+++ b/.github/workflows/trampoline.yaml
@@ -10,10 +10,12 @@ on:
 
 permissions:
   contents: read
-  id-token: write
 
 jobs:
   build:
+    permissions:
+      contents: read
+      id-token: write
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: true
@@ -77,7 +79,7 @@ jobs:
         run: pixi run build-trampoline --target ${{ matrix.target }} --no-compress
 
       - name: Azure login (OIDC)
-        if: runner.os == 'Windows' && github.event_name != 'pull_request'
+        if: runner.os == 'Windows' && github.ref == 'refs/heads/trampoline-build-branch'
         uses: azure/login@a457da9ea143d694b1b9c7c869ebb04ebe844ef5 # v2.3.0
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
@@ -85,7 +87,7 @@ jobs:
           allow-no-subscriptions: true
 
       - name: Sign Windows trampoline
-        if: runner.os == 'Windows' && github.event_name != 'pull_request'
+        if: runner.os == 'Windows' && github.ref == 'refs/heads/trampoline-build-branch'
         uses: azure/trusted-signing-action@87c2e83e6868da99d3380aa309851b32ed9a8346 # v1.1.0
         with:
           endpoint: ${{ vars.AZURE_SIGNING_ENDPOINT }}
@@ -134,7 +136,7 @@ jobs:
 
       - name: Commit and push updated binaries
         # Don't run on forks
-        if: github.repository == 'prefix-dev/pixi' && startsWith(github.ref, 'refs/heads')
+        if: github.repository == 'prefix-dev/pixi' && github.ref == 'refs/heads/trampoline-build-branch'
         run: |
           # Set the repository to push to the repository the workflow is running on
           git config user.name "GitHub Actions"
