--- a/pixi.toml
+++ b/pixi.toml
@@ -415,7 +415,7 @@ backend = { name = "pixi-build-rust", version = "*" }
 config = { compilers = ["c", "rust"] }
 source = { path = "crates/pixi" }
 # Required to support the build of tree-sitter.
-target.linux.config.env = { CFLAGS = "$CFLAGS -D_BSD_SOURCE", RUSTFLAGS = "-C link-arg=-Wl,--verbose,--sysroot=$CONDA_BUILD_SYSROOT" }
+target.linux.config.env = { CFLAGS = "$CFLAGS -D_BSD_SOURCE", RUSTFLAGS = "$RUSTFLAGS -C link-arg=-Wl,--verbose,--sysroot=$CONDA_BUILD_SYSROOT" }
 
 [package.target.unix.build-dependencies]
 clang = "*"
