fix: backend release bugs (#5482)

--- a/pixi-build-backends/recipe/all-backends/recipe.yaml
+++ b/pixi-build-backends/recipe/all-backends/recipe.yaml
@@ -111,6 +111,7 @@ outputs:
       files:
         - bin/pixi-build-cmake
         - bin/pixi-build-cmake.exe
+        - LICENSE
         - THIRDPARTY.yml
       script:
         - if: unix
@@ -400,5 +401,6 @@ outputs:
       description: |
         This package provides a ROS build backend for Pixi, allowing the integration of ROS packages into the Pixi build system.
       license: BSD-3-Clause
+      license_file: LICENSE
       documentation: https://prefix-dev.github.io/pixi-build-backends
       repository: https://github.com/prefix-dev/pixi-build-backends
